change type PeriodicBooking